[project]
name = "netconf-lnu"
version = "2023.12.02.01"
#dynamic = ["version"]
description = "Python Scripts to get schema YANG files from network device"
authors = [
    {name = "Meng Bo", email = "mengbo@lnu.edu.cn"},
]
dependencies = [
    "ncclient>=0.6.15",
    "xmltodict>=0.13.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm.scripts]
#netconf-lnu = "python3 src/netconf_lnu/main.py"
netconf-lnu = {call = "netconf_lnu.main:main"}

[tool.pdm.version]
source = "call"
getter = "version:get_version"

[tool.pdm.dev-dependencies]
dev = [
    "pyang>=2.6.0",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
netconf-lnu = "netconf_lnu.main:main"

[project.urls]
Source = "https://github.com/mengbo/netconf-lnu"
